--- a/src/components/GameSingleMobile/GameSingleMobile.scss
+++ b/src/components/GameSingleMobile/GameSingleMobile.scss
@@ -6,6 +6,7 @@
 
 	&__item-image-wrapper {
 		position: relative;
+		font-size: 0;
 	}
 
 	&__item-image {
